--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   intl: ^0.18.0
   font_awesome_flutter: ^10.4.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/avatVeggie.png
+    # - assets/images/login.png
     - assets/images/transactions.png
     - assets/images/farmer2.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
